build: upgrade quarkus version

--- a/buildSrc/src/main/groovy/service.quarkus-conventions.gradle
+++ b/buildSrc/src/main/groovy/service.quarkus-conventions.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    implementation enforcedPlatform('io.quarkus.platform:quarkus-bom:2.16.1.Final')
+    implementation enforcedPlatform('io.quarkus.platform:quarkus-bom:3.5.2')
     implementation 'io.quarkus:quarkus-container-image-jib'
 
     testImplementation 'io.quarkus:quarkus-junit5'
