--- a/buildSrc/src/main/groovy/extension-deployment.quarkus-conventions.gradle
+++ b/buildSrc/src/main/groovy/extension-deployment.quarkus-conventions.gradle
@@ -3,5 +3,5 @@ plugins {
 }
 
 dependencies {
-    implementation enforcedPlatform('io.quarkus.platform:quarkus-bom:2.16.1.Final')
+    implementation enforcedPlatform('io.quarkus.platform:quarkus-bom:3.5.2')
 }
