--- a/scripts/nginx-gateway.conf
+++ b/scripts/nginx-gateway.conf
@@ -17,8 +17,14 @@ http {
     server vehicle-service:8080;
   }
 
+  upstream payment-service {
+    server payment-service:8080;
+  }
+
   server {
     listen 80;
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Headers' '*';
 
     location /rents {
       proxy_pass http://rent-service;
@@ -30,6 +36,10 @@ http {
 
     location /vehicles {
       proxy_pass http://vehicle-service;
+    }
+
+    location /paymentmethods {
+      proxy_pass http://payment-service;
     }
   }
 }
