--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 dependencies {
     implementation project(':common')
-    implementation project(':common-quarkus:outbox-mongo-extension:runtime')
+    implementation project(':common-quarkus:outbox-jpa-extension:runtime')
 
     implementation 'io.quarkus:quarkus-resteasy-jackson'
     implementation 'io.quarkus:quarkus-hibernate-validator'
