feat(vehicle-service): add stripe webhook to enable payment methods

--- a/scripts/nginx-gateway.conf
+++ b/scripts/nginx-gateway.conf
@@ -41,5 +41,9 @@ http {
     location /paymentmethods {
       proxy_pass http://payment-service;
     }
+
+    location /stripe/webhook {
+      proxy_pass http://payment-service;
+    }
   }
 }
