--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 
     implementation 'io.quarkus:quarkus-resteasy-jackson'
     implementation 'io.quarkus:quarkus-hibernate-validator'
-    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
+    implementation 'io.quarkus:quarkus-hibernate-orm'
     implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
     implementation 'com.stripe:stripe-java:24.2.0'
