chore(rent-service): use flyway as db migration tool

--- a/rent-service/src/main/resources/application.properties
+++ b/rent-service/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url = jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
+spring.datasource.url = jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?currentSchema=${POSTGRES_SCHEMA}
 spring.datasource.username = ${POSTGRES_USERNAME}
 spring.datasource.password = ${POSTGRES_PASSWORD}
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
+
+spring.flyway.locations = classpath:db/migration/postgres
+spring.flyway.defaultSchema = ${POSTGRES_SCHEMA}
 
 spring.kafka.consumer.group-id = rent-service
 spring.kafka.consumer.bootstrap-servers = ${KAFKA_BOOSTRAP_SERVERS}
