--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,7 @@ services:
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
       POSTGRES_DATABASE: db
+      POSTGRES_SCHEMA: rent-service
       POSTGRES_USERNAME: admin
       POSTGRES_PASSWORD: admin
       KAFKA_BOOSTRAP_SERVERS: kafka:9092
