--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.flywaydb:flyway-core:9.10.2'
 	implementation 'org.postgresql:postgresql:42.2.23'
 	annotationProcessor 'org.hibernate:hibernate-jpamodelgen:6.1.6.Final'
 
