--- a/rent-service/build.gradle
+++ b/rent-service/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.2.23'
 	annotationProcessor 'org.hibernate:hibernate-jpamodelgen:6.1.6.Final'
 
+	testImplementation 'io.github.benas:random-beans:3.9.0'
+
 	intTestImplementation 'org.testcontainers:testcontainers:1.16.0'
 	intTestImplementation 'org.testcontainers:junit-jupiter:1.16.0'
 	intTestImplementation 'org.testcontainers:postgresql:1.16.0'
